# flow-rt

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  prebuild.py  tsconfig.json  vite.config.ts
flow-rt-app/: Cargo.toml
flow-rt-app/capabilities/: default.json
flow-rt-app/src/: macros.rs  main.rs  schema.rs
flow-rt-app/src/fs/: mod.rs
flow-rt-app/src/projects/: graphs.rs  initializer.rs  mod.rs
flow-rt-app/src/schemas/: helpers.rs  mod.rs
flow-rt-app/src/state/: mod.rs
flow-rt-shared/: Cargo.toml
flow-rt-vm/: Cargo.toml
rust-vendor/core-modules/: Cargo.toml
rust-vendor/core-modules/http-module/: Cargo.toml
rust-vendor/core-modules/test-nmap-module/: Cargo.toml
src/: App.tsx  index.css  main.tsx  routes.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.windows.conf.json  test.db
src-tauri/.generated/: log.json  math.json  nmap.json
src-tauri/benches/: graph_benchmarks.rs
src-tauri/migrations/2026-02-03-150950-0000_create_projects/: up.sql
src-tauri/migrations/2026-02-04-133921-0000_create_recent_projects/: down.sql  up.sql
src-tauri/migrations/2026-02-04-160138-0000_modify_projects/: up.sql
src-tauri/src/: lib.rs  macros.rs  main.rs  models.rs
src-tauri/src/binding/: mod.rs
src-tauri/src/fs/: mod.rs
src-tauri/src/graphs/: in_memory_graph.rs  mod.rs
src-tauri/src/graphs/instructions/: mod.rs
src-tauri/src/pipelines/: logging.rs  math.rs  mod.rs  nmap.rs
src-tauri/src/projects/: mod.rs
src-tauri/src/schemas/: helpers.rs  mod.rs
src-tauri/src/settings/: mod.rs
src-tauri/src/state/: mod.rs
src/components/: labeled-handle.tsx  theme-provider.tsx  use-fetch-wrapper.tsx
src/components/auth/: authenticator.component.tsx  profile-provider.tsx
src/components/dialogs/: dialog-renderer.component.tsx  dialog.provider.tsx  normal-dialog.component.tsx  page-dialog.component.tsx
src/components/editor/: editor.layout.tsx
src/components/fs/: directory-selector.component.tsx
src/components/machines/: machines-overview-item.component.tsx  machines-overview.component.tsx  machines.provider.tsx
src/components/navigation/: nav-bar.component.tsx
src/lib/: graph.utils.ts  models.ts  types.ts  utils.ts
(+41 files in other folders)
