[package]
name = "hackthebox-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "hackthebox_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-http = "2"
schemars = "1.2.0"
anyhow = "1.0.100"
dyn-rt = { path = "../rust-vendor/dyn-rt/dyn-rt" }
tokio = { version = "1.48.0", features = ["fs", "macros", "full"] }
rustc-hash = "2.1.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "graph_benchmarks"
harness = false
